# financial-analysis

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260402_0001_initial_schema.py  20260404_0002_day3_models_and_crud.py  20260406_0003_add_subscription_website_url.py  20260407_0004_upload_status_fields.py  20260416_0005_user_scoped_categories.py  20260417_0006_scope_expense_reports_to_uploads.py  20260421_0007_user_preferred_currency.py  20260422_0008_telegram_link_fields.py  20260424_0009_family_member_privacy.py  20260426_0010_day25_performance_indexes.py  20260428_0011_day27_encrypted_telegram_fields.py  20260429_0012_day28_performance_optimizations.py
backend/docs/: api.md  openapi.json
backend/scripts/: seed_categories.py  start_playwright_server.sh
backend/src/: __init__.py  config.py  dependencies.py  main.py  worker.py
backend/src/api/: router.py
backend/src/core/: database.py  email.py  encryption.py  logging.py  middleware.py  rate_limiter.py  security.py  storage.py
backend/src/jobs/: __init__.py  csv_processing.py  currency_rates.py  notifications.py  pdf_processing.py
backend/src/models/: __init__.py  category.py  dashboard_layout.py  data_source.py  exchange_rate.py  expense_report.py  family.py  family_member.py  notification.py  notification_preference.py  payment_history.py  payment_method.py  raw_transaction.py  sent_notification.py  (+3 more)
backend/tests/: conftest.py  test_final_qa.py  test_performance_indexes.py
(+218 files in other folders)
