[project]
name = "backend"
version = "0.1.0"
description = "Backend API for MySubscription Tracker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "arq>=0.27.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.10.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "sentry-sdk[fastapi]>=2.33.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
package = false
